fixed h1 and picture next to it to align properly

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -24,6 +24,8 @@ nav {
 h1 {
   font-size: 3rem;
   color: black;
+  display: flex;
+  align-items: center;
 }
 nav ul {
   font-size: large;
@@ -47,6 +49,7 @@ nav ul li a:hover {
   width: 100px;
   height: 100px;
   border-radius: 100px;
+  padding: 10px;
 }
 
 /* -----------header2------------------------- */
